--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="eng">
     <head>
         <title>Index HTML Tutorial</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>Index HTML Tutorial</h1>
-        <!-- adding an inline JS -->
-        <script type="text/javascript">
-            // window.alert('Hellow World!')
-            // alert("This is an alert statement")
-            // document.write("<h1>Using document dot write to format texts: inline JS</h1>")
-        </script>
+        <div class="header-section">
+        <h1 id="first_header">HTML, CSS & JavaScript Development Environment</h1>
+        <div class="border"></div>
+        </div>
+        <p class="paragraph">This is the first paragraph</p>
+        <p class="paragraph">This is a second paragraph with the same class name, i.e., paragraph</p>
 
-        <!--adding external JS file -->
+
         <script src="index.js"></script>
     </body>
 </html>
