--- a/JavaScript_Fundamentals/OOP/Dates/index.html
+++ b/JavaScript_Fundamentals/OOP/Dates/index.html
@@ -14,7 +14,13 @@
             <h2>The setInterval() Method</h2>
             <p id="set-interval"></p>
         </div>
+
+        <div>
+            <h2>The setTimeout() Method</h2>
+            <p id="set-timeout"></p>
+        </div>
         
         <script src="set_interval.js" async defer></script>
+        <script src="set_time_out.js"></script>
     </body>
 </html>
