--- a/JavaScript_Fundamentals/OOP/Dates/index.html
+++ b/JavaScript_Fundamentals/OOP/Dates/index.html
@@ -7,20 +7,28 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <header>
+            <h1>The Date Objects</h1>
+        </header>
         <div>
-            <h2>The setInterval() Method</h2>
+            <h2>The setInterval() & clearInterval() Methods</h2>
+            <p>The <b>setInterval()</b> method calls a function at a specified intervals (in Milliseconds). The method continues to call the function until <b>clearInterval()</b> method is called or the window is closed.</p>
             <p id="set-interval"></p>
         </div>
-
+        <div>
+            <h2>Using setInterval() Method to Display the current time every 1 second</h2>
+            <p id="set-interval-method-to-display-time"></p>
+        </div>
         <div>
             <h2>The setTimeout() Method</h2>
+            <p>The <b>setTimeout()</b> method is used to schedule a function</p>
             <p id="set-timeout"></p>
         </div>
-        
-        <script src="set_interval.js" async defer></script>
+
+        <script src="set-interval.js" async defer></script>
         <script src="set_time_out.js"></script>
     </body>
 </html>
