modified the Dates-objects folder

--- a/JavaScript_Fundamentals/OOP/Dates/index.html
+++ b/JavaScript_Fundamentals/OOP/Dates/index.html
@@ -16,15 +16,20 @@
         <div>
             <h2>The setInterval() & clearInterval() Methods</h2>
             <p>The <b>setInterval()</b> method calls a function at a specified intervals (in Milliseconds). The method continues to call the function until <b>clearInterval()</b> method is called or the window is closed.</p>
+            <p><b>Example 1:</b> Program to Print <b>Hello</b> every 1 Minute = 60 Sec = 60,000 Milliseconds</p>
             <p id="set-interval"></p>
         </div>
         <div>
             <h2>Using setInterval() Method to Display the current time every 1 second</h2>
             <p id="set-interval-method-to-display-time"></p>
         </div>
+        <hr>
         <div>
             <h2>The setTimeout() Method</h2>
-            <p>The <b>setTimeout()</b> method is used to schedule a function</p>
+            <p>* The <b>setTimeout()</b> method is used to schedule a function. The method executes a block of code after the specified time.</p>
+            <p>* The method executes the code only once.</p>
+            <p>* The setTimeout() is commonly used if you wish to run your function a specified number of milliseconds from when the setTimeout() method was called.</p>
+            <p><b>Example: </b>using <b>setTimeout()</b> to print a statement after 2 seconds:</p>
             <p id="set-timeout"></p>
         </div>
 
