--- a/JavaScript-DOM/Get-Elements-from-DOM/Project-querySelector/index.html
+++ b/JavaScript-DOM/Get-Elements-from-DOM/Project-querySelector/index.html
@@ -18,9 +18,9 @@
 
         <div class="container border border-primary mt-5 p-5">
             <div id="studentList">
-                <div class="student">Student 1</div>
-                <div class="student">Student 2</div>
-                <div class="student">Student 3</div>
+                <div id="firstStudent" class="student">Student 1</div>
+                <div id="secondStudent" class="student">Student 2</div>
+                <div id="thirdStudent" class="student">Student 3</div>
             </div>
         </div>
         <script src="index.js" async defer></script>
