--- a/JavaScript-DOM/Access-DOM-Elements/Project-Access-DOM-Elements/index.html
+++ b/JavaScript-DOM/Access-DOM-Elements/Project-Access-DOM-Elements/index.html
@@ -39,6 +39,18 @@
                     <h2>Portfolio Section</h2>
                     <p>Some pagagraphs goes here</p>
                 </div>
+                <div class="row">
+                    <div id="firstProject" class="col-sm-4">
+                        <h4>Project 1</h4>
+                        <p>Sample Project 1 paragraph</p>
+                    </div>
+                    <div id="secondProject" class="col-sm-4">
+                        <h4>Project 2</h4>
+                    </div>
+                    <div id="thirdProject" class="col-sm-4">
+                        <h4>Project 3</h4>
+                    </div>
+                </div>
             </div>
         </section>
         <footer id="footerSection" class="section footer-section text-center">
