++ added DOM Manipulation folder

--- a/JavaScript-DOM/JS-DOM-Manipulation/Project-DOM-Manipulation/index.html
+++ b/JavaScript-DOM/JS-DOM-Manipulation/Project-DOM-Manipulation/index.html
@@ -36,19 +36,19 @@
         <section id="portfolioSection" class="section portfolio-section text-center">
             <div class="container-fluid">
                 <div class="row">
-                    <h2>Portfolio Section</h2>
-                    <p>Some paragraphs goes here</p>
+                    <h2>Portfolio Title</h2>
+                    <p>Portfolio Subtitle</p>
                 </div>
                 <div class="row">
-                    <div id="firstProject" class="col-sm-4">
-                        <h4>Project 1</h4>
+                    <div id="firstProjectDescription" class="col-sm-4">
+                        <h4>Project 1 Title</h4>
                         <p>Sample Project 1 paragraph</p>
                     </div>
                     <div id="secondProject" class="col-sm-4">
-                        <h4>Project 2</h4>
+                        <h4>Project 2 Title</h4>
                     </div>
                     <div id="thirdProject" class="col-sm-4">
-                        <h4>Project 3</h4>
+                        <h4>Project 3 Title</h4>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="container">
                 <div class="row">
                     <h2>Footer Section</h2>
-                    <p>Some pagagraphs goes here</p>
+                    <p>Some footer paragraph goes here</p>
                 </div>
             </div>
         </footer>
