--- a/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/03-calculator-app/index.html
+++ b/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/03-calculator-app/index.html
@@ -37,7 +37,13 @@
         </div>
       </nav>
     </header>
-    <section></section>
+    <section class="border p-5">
+      <div class="container border border-secondary p-4">
+        <div class="row border border-info p-3">
+          <div class="col border border-warning p-2"></div>
+        </div>
+      </div>
+    </section>
     <script src="index.js" async defer></script>
   </body>
 </html>
