--- a/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/05-countdown-timer/index.html
+++ b/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/05-countdown-timer/index.html
@@ -37,28 +37,28 @@
         </div>
       </nav>
     </header>
-    <section class="border p-5">
-      <div class="container countdown-container border border-secondary p-4">
-        <div class="row border border-info p-3">
-          <div class="col-sm-3 border border-warning p-2">
+    <section class="p-2">
+      <div class="container countdown-container">
+        <div class="row">
+          <div class="col-sm-3">
             <div class="box">
               <p id="days" class="">0</p>
               <span>days</span>
             </div>
           </div>
-          <div class="col-sm-3 border border-warning p-2">
+          <div class="col-sm-3">
             <div class="box">
               <p id="hours" class="">0</p>
               <span>hours</span>
             </div>
           </div>
-          <div class="col-sm-3 border border-warning p-2">
+          <div class="col-sm-3">
             <div class="box">
               <p id="minutes" class="">0</p>
               <span>minutes</span>
             </div>
           </div>
-          <div class="col-sm-3 border border-warning p-2">
+          <div class="col-sm-3">
             <div class="box">
               <p id="seconds" class="">0</p>
               <span>seconds</span>
