styled the countdown app

--- a/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/05-countdown-timer/index.html
+++ b/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/05-countdown-timer/index.html
@@ -37,8 +37,11 @@
         </div>
       </nav>
     </header>
-    <section class="p-2">
+    <section class="">
       <div class="container countdown-container">
+        <div class="row">
+          <div class="col"><h1>Coming soon</h1></div>
+        </div>
         <div class="row">
           <div class="col-sm-3">
             <div class="box">
@@ -62,6 +65,26 @@
             <div class="box">
               <p id="seconds" class="">0</p>
               <span>seconds</span>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="">
+              <p>Subscribe to get notified.</p>
+              <div class="form-floating">
+                <input
+                  id="email"
+                  class="form-control"
+                  type="text"
+                  name="email"
+                  placeholder="Enter your email"
+                />
+                <label class="" for="email">Enter your email</label>
+              </div>
+              <div class="mt-2">
+                <button class="btn btn-lg">Subscribe</button>
+              </div>
             </div>
           </div>
         </div>
