--- a/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/04-counter-app/index.html
+++ b/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/04-counter-app/index.html
@@ -33,11 +33,29 @@
     <header>
       <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container">
-          <span class="navbar-brand">Counter App</span>
+          <span class="navbar-brand">Counter Application</span>
         </div>
       </nav>
     </header>
-    <section></section>
-    <script src="index.js" async defer></script>
+    <section class="">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <button class="btn btn-lg btn-primary">
+              <span id="addBtn" class="bi bi-plus-lg"> Button</span>
+            </button>
+          </div>
+          <div class="col-sm-4">
+            <div id="circleId" class="circle"></div>
+          </div>
+          <div class="col-sm-4">
+            <button class="btn btn-lg btn-primary">
+              <span id="minusId" class="bi bi-dash-lg"> Button</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <script src="script.js" async defer></script>
   </body>
 </html>
