--- a/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/08-To-Do-App/index.html
+++ b/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/08-To-Do-App/index.html
@@ -33,17 +33,11 @@
     <header>
       <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container">
-          <span class="navbar-brand">Calculator App</span>
+          <span class="navbar-brand">To Do App</span>
         </div>
       </nav>
     </header>
-    <section class="border p-5">
-      <div class="container border border-secondary p-4">
-        <div class="row border border-info p-3">
-          <div class="col border border-warning p-2"></div>
-        </div>
-      </div>
-    </section>
+    <section></section>
     <script src="index.js" async defer></script>
   </body>
 </html>
