script.js to console a message when + button is clicked

--- a/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/04-counter-app/index.html
+++ b/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/04-counter-app/index.html
@@ -41,16 +41,16 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <button class="btn btn-lg btn-primary">
-              <span id="addBtn" class="bi bi-plus-lg"> Button</span>
+            <button id="addBtn" class="btn btn-lg btn-primary">
+              <i id="" class="bi bi-plus-lg"> Button</i>
             </button>
           </div>
           <div class="col-sm-4">
             <div id="circleId" class="circle"></div>
           </div>
           <div class="col-sm-4">
-            <button class="btn btn-lg btn-primary">
-              <span id="minusId" class="bi bi-dash-lg"> Button</span>
+            <button id="minusId" class="btn btn-lg btn-primary">
+              <i id="" class="bi bi-dash-lg"> Button</i>
             </button>
           </div>
         </div>
