--- a/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/01-Display-Data-App/index.html
+++ b/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/01-Display-Data-App/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Display Data App</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -33,7 +33,7 @@
     <header>
       <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container">
-          <span class="navbar-brand">Display data on a button click.</span>
+          <span class="navbar-brand">Display Data App.</span>
         </div>
       </nav>
     </header>
