edited to-Do App

--- a/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/08-To-Do-App/index.html
+++ b/js-Fundamentals/12-DOM/03-DOM-Events/javascript-dom-events-in-action/08-To-Do-App/index.html
@@ -62,7 +62,7 @@
                 <!-- Add Task Modal -->
                 <div
                   id="addTaskModal"
-                  class="modal "
+                  class="modal"
                   tabindex="-1"
                   aria-hidden="true"
                   aria-labelledby="modalTitle"
@@ -136,7 +136,7 @@
             </div>
           </div>
           <div class="row box border p-2">
-            <div class=""><h2>My Tasks</h2></div>
+            <div class=""><h2>List My Tasks</h2></div>
           </div>
           <div class="row box border border-danger p-5 display-tasks-row">
             <div id="" class=""></div>
@@ -144,11 +144,6 @@
         </div>
       </section>
     </main>
-    <footer>
-      <div class="container">
-        <div class="row"><hr class="hr" /></div>
-      </div>
-    </footer>
     <script src="script.js" async defer></script>
   </body>
 </html>
