added a function to handle editForm

--- a/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/03-DOM-Events/01-Projects-With-DOM-Events/08-To-Do-App/index.html
+++ b/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/03-DOM-Events/01-Projects-With-DOM-Events/08-To-Do-App/index.html
@@ -126,11 +126,11 @@
                         Close
                       </button>
                       <button
-                        id="modalButtonToAddTask"
-                        type="button"
+                        id="submitTaskButton"
+                        type="submit"
                         class="btn btn-outline-success"
                       >
-                        Add Task
+                        Submit
                       </button>
                     </div>
                   </div>
