added a v2 script with an aim to seperate concerns

--- a/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/04-Apps-using-DOM-Concepts/02-ToDo-App/index.html
+++ b/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/04-Apps-using-DOM-Concepts/02-ToDo-App/index.html
@@ -144,6 +144,6 @@
         </div>
       </section>
     </main>
-    <script src="script.js" async defer></script>
+    <script src="script-v2.js" async defer></script>
   </body>
 </html>
