using DOM remove() method

--- a/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/02-Document-Object-Methods/02-remove-Method/index.html
+++ b/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/02-Document-Object-Methods/02-remove-Method/index.html
@@ -38,27 +38,31 @@
     <header>
       <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <div class="container">
-          <span class="navbar-brand">remove() Method</span>
+          <span class="navbar-brand">The remove() DOM Method</span>
         </div>
       </nav>
     </header>
     <main>
       <section class="">
         <div class="container">
-          <div class="row">
-            <div class="parent border border-primary p-3">
-              <div class="child border border-secondary p-2">
-                <p>This is a child element</p>
-                <button id="removeElementButton" class="btn btn-danger">Remove</button>
-              </div>
+          <div class="row border border-primary p-5">
+            <div class="parentDiv">
+              <h4>Header goes here!</h4>
+              <p>Some paragraph content.</p>
+              <button id="removeElementButton" class="btn btn-danger">
+                Remove
+              </button>
+            </div>
+          </div>
+          <div class="row border border-secondary p-5">
+            <div class="">
+              <h4>Another header</h4>
+              <p>Sample paragraph content</p>
             </div>
           </div>
         </div>
       </section>
-      <section class=""></section>
     </main>
-    <footer class=""></footer>
-
     <script src="script.js" async defer></script>
   </body>
 </html>
