modified index.html by adding main tag

--- a/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/04-Apps-using-DOM-Concepts/04-Digital-Time-App/index.html
+++ b/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/04-Apps-using-DOM-Concepts/04-Digital-Time-App/index.html
@@ -37,38 +37,41 @@
         </div>
       </nav>
     </header>
-    <section>
-      <div class="container">
-        <div class="row border">
-          <div class="col-sm-3">
-            <p>Year</p>
-            <span id="year"></span>
+    <main>
+      <section>
+        <div class="container">
+          <div class="row border">
+            <div class="col-sm-3">
+              <p>Year</p>
+              <span id="year"></span>
+            </div>
+            <div class="col-sm-3">
+              <p>Month</p>
+              <span id="month"></span>
+            </div>
+            <div class="col-sm-3">
+              <p>Day</p>
+              <span id="day"></span>
+            </div>
           </div>
-          <div class="col-sm-3">
-            <p>Month</p>
-            <span id="month"></span>
-          </div>
-          <div class="col-sm-3">
-            <p>Day</p>
-            <span id="day"></span>
+          <div class="row border">
+            <div class="col-sm-3">
+              <p>Hour</p>
+              <span id="hour"></span>
+            </div>
+            <div class="col-sm-3">
+              <p>Minute</p>
+              <span id="minute"></span>
+            </div>
+            <div class="col-sm-3">
+              <p>Seconds</p>
+              <span id="seconds"></span>
+            </div>
           </div>
         </div>
-        <div class="row border">
-          <div class="col-sm-3">
-            <p>Hour</p>
-            <span id="hour"></span>
-          </div>
-          <div class="col-sm-3">
-            <p>Minute</p>
-            <span id="minute"></span>
-          </div>
-          <div class="col-sm-3">
-            <p>Seconds</p>
-            <span id="seconds"></span>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </main>
+
     <script src="script.js" async defer></script>
   </body>
 </html>
